src/test/resources/expected/test-exception-25.kore.golden
Parse error: ../../../test/resources//test-exception-25.kore:5:17:
  |
5 |   symbol #a{#b}(m) : #n []
  |                 ^
unexpected 'm'
expecting '#'
